# tracepro

./: .gitignore  README.md  cabeza_lectora_minimet.ipynb  ejemplo_basico_minimet.ipynb  ejemplo_lente_1.ipynb  pruebas_importar.ipynb  pruebas_rotar.ipynb  pruebas_surface_source.ipynb  pyproject.toml
Logs/: log_069.txt  log_070.txt  log_071.txt  log_072.txt  log_073.txt  log_074.txt  log_075.txt  log_076.txt  log_077.txt  log_078.txt  log_079.txt  log_080.txt  log_081.txt  log_082.txt  log_083.txt  log_084.txt  log_085.txt  log_086.txt  log_087.txt  log_088.txt  log_089.txt  log_090.txt  log_091.txt  log_092.txt  log_093.txt  log_094.txt  log_095.txt  log_096.txt  log_097.txt  log_098.txt  log_099.txt
examples/: block_rotation.ipynb  lens_data.txt  lens_example.ipynb  rotations.ipynb  surface_source.ipynb  tracepro_COM.ipynb
resultados/: pruebas_importar.scm  pruebas_importar.tracepro
resultados/ejemplo_basico_minimet/: ejemplo_basico_despa.tracepro  ejemplo_basico_despl.tracepro  ejemplo_basico_minimet.scm  ejemplo_basico_minimet.tracepro  map_1.txt  map_10.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_7.txt  map_8.txt  map_9.txt  map_r_1.txt  map_r_10.txt  map_r_2.txt  map_r_3.txt  map_r_4.txt  map_r_5.txt  map_r_6.txt  map_r_7.txt  map_r_8.txt  map_r_9.txt
resultados/ejemplo_lente_1/: ejemplo_1.tracepro  irradiance_map_1.txt  irradiance_map_10.txt  irradiance_map_2.txt  irradiance_map_3.txt  irradiance_map_4.txt  irradiance_map_5.txt  irradiance_map_6.txt  irradiance_map_7.txt  macro.scm  (+2 more)
tracepro/: README.md  app.py  element.py  source.py
(+47 files in other folders)
