[project]
name = "tracepro"
version = "0.1"
description = "Internal Python utilities for automating TracePro via COM and Scheme macros"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
``